docs: update BeeAI Platform Integration (#1254)
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -3,25 +3,18 @@ title: "BeeAI Platform"
 icon: "server"
 ---
 
-[BeeAI platform](https://beeai.dev/) is an open platform to help you discover, run, and compose AI agents from any framework. This tutorial demonstrates how to integrate BeeAI platform agents with the BeeAI Framework using the `BeeAIPlatformAgent` class.
+[BeeAI Platform](https://beeai.dev/) is an open platform to help you discover, run, and compose AI agents from any framework.
+This tutorial demonstrates how to consume agents from the BeeAI Platform and expose agents built in BeeAI Framework to the BeeAI Platform.
 
-<Note>
-	BeeAI platform is an open agent platform, while the BeeAI framework is an SDK for developing agents in Python or TypeScript.
-</Note>
+**Prerequisites**
+
+- **[BeeAI Platform](https://beeai.dev/)** installed and running locally
+- **BeeAI Framework** installed with `pip install beeai-framework[beeai-platform]`
 
 ---
 
-### Prerequisites
 
-- **[BeeAI platform](https://beeai.dev/)** installed and running locally
-- **BeeAI Framework** installed with `pip install beeai-framework`
-- **Extension for BeeAI Platform** installed with `pip install 'beeai-framework[beeai-platform]'`
-- Project setup:
-    - Create project directory: `mkdir beeai-remote-agent && cd beeai-remote-agent`
-    - Set up Python virtual environment: `python -m venv venv && source venv/bin/activate`
-    - Create agent module: `mkdir my_agents && touch my_agents/remote_agent.py`
-
-### Consuming an agent from the platform (client)
+## Consuming from the platform (client)
 
 The `BeeAIPlatformAgent` class allows you to connect to any agent hosted on the BeeAI platform. This means that you can interact with agents built from any framework!
 
@@ -37,7 +30,7 @@ Here's a simple example that uses the built-in `chat` agent:
 
 	{/* <!-- embedme python/examples/agents/providers/beeai_platform.py --> */}
 
-	```py Python
+	```py Python [expandable]
 	import asyncio
 	import sys
 	import traceback
@@ -77,8 +70,45 @@ Here's a simple example that uses the built-in `chat` agent:
 	
 	```
 
-		```ts TypeScript
-	// COMING SOON
+	{/* <!-- embedme typescript/examples/agents/providers/beeai_platform.ts --> */}
+	```ts TypeScript [expandable]
+	import "dotenv/config.js";
+	import { BeeAIPlatformAgent } from "beeai-framework/adapters/beeai_platform/agents/agent";
+	import { createConsoleReader } from "examples/helpers/io.js";
+	import { FrameworkError } from "beeai-framework/errors";
+	import { TokenMemory } from "beeai-framework/memory/tokenMemory";
+	
+	////////////////////////////////////////////////////////
+	///   Supports only BeeAI platform version v0.2.xx   ///
+	////////////////////////////////////////////////////////
+	
+	const agentName = "chat";
+	
+	const instance = new BeeAIPlatformAgent({
+	  url: "http://127.0.0.1:8333/api/v1/acp",
+	  agentName,
+	  memory: new TokenMemory(),
+	});
+	
+	const reader = createConsoleReader();
+	
+	try {
+	  for await (const { prompt } of reader) {
+	    const result = await instance.run({ input: prompt }).observe((emitter) => {
+	      emitter.on("update", (data) => {
+	        reader.write(`Agent (received progress) 🤖 : `, JSON.stringify(data.value, null, 2));
+	      });
+	      emitter.on("error", (data) => {
+	        reader.write(`Agent (error) 🤖 : `, data.message);
+	      });
+	    });
+	
+	    reader.write(`Agent (${agentName}) 🤖 : `, result.result.text);
+	  }
+	} catch (error) {
+	  reader.write("Agent (error)  🤖", FrameworkError.ensure(error).dump());
+	}
+	
 	```
 </CodeGroup>
 
@@ -89,11 +119,11 @@ You can compose multiple BeeAI platform agents into advanced workflows using the
 
 In this example, the `GPT Researcher` agent researches a topic, and the `Podcast creator` takes the research report and produces a podcast transcript.
 
-You can adjust or expand this pattern to orchestrate more complex multi agent workflows.
+You can adjust or expand this pattern to orchestrate more complex multi-agent workflows.
 
 {/* <!-- embedme python/examples/workflows/remote.py --> */}
 
-```py
+```py Python [expandable]
 import asyncio
 import sys
 import traceback
@@ -164,22 +194,24 @@ if __name__ == "__main__":
 
 ```
 
-_Source: python/examples/workflows/remote.py_
 
+## Exposing to the platform (server)
 
-### Registering agents to the platform (server)
+The `BeeAIPlatformServer` class exposes an agent or any other runnable (tool/chat model, ...) to the **BeeAI Platform**.
+It gets automatically registered to the platform and allows you to access and use the agents directly in the platform.
 
-The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as an ACP server. It is automatically registered with the platform, allowing you to access and use the agents directly within the framework.
+Key Features:
 
-<Note>
-	BeeAI platform supports only one agent per server.
-</Note>
+- easy to expose (deploy) the current application to the production-ready environment
+- built-in trajectory, forms integration, LLM inference support, ...
+- easy to extend and debug
+
 
 <CodeGroup>
 
 	{/* <!-- embedme python/examples/serve/beeai_platform.py --> */}
 
-	```py Python
+	```py Python [expandable]
 	from beeai_framework.adapters.beeai_platform.backend.chat import BeeAIPlatformChatModel
 	from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformMemoryManager, BeeAIPlatformServer
 	from beeai_framework.agents.requirement import RequirementAgent
@@ -200,7 +232,8 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	def main() -> None:
 	    agent = RequirementAgent(
 	        llm=BeeAIPlatformChatModel(
-	            preferred_models=["openai:gpt-4o", "ollama:llama3.1:8b"], parameters=ChatModelParameters(stream=True)
+	            preferred_models=["openai:gpt-4o", "ollama:llama3.1:8b"],
+	            parameters=ChatModelParameters(stream=True),
 	        ),
 	        tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
 	        memory=UnconstrainedMemory(),
@@ -208,10 +241,10 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	    )
 	
 	    # Runs HTTP server that registers to BeeAI platform
-	    server = BeeAIPlatformServer(config={"configure_telemetry": False}, memory_manager=BeeAIPlatformMemoryManager())
+	    server = BeeAIPlatformServer(memory_manager=BeeAIPlatformMemoryManager())
 	    server.register(
 	        agent,
-	        name="Framework chat agent",
+	        name="Framework chat agent",  # (optional)
 	        description="Simple chat agent",  # (optional)
 	        detail=AgentDetail(interaction_mode="multi-turn"),  # default is multi-turn (optional)
 	    )
@@ -221,11 +254,216 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	if __name__ == "__main__":
 	    main()
 	
-	# run: beeai agent run chat_agent
-	
 	```
 
 	```ts TypeScript
 	// COMING SOON
 	```
 </CodeGroup>
+
+
+<Note>
+	BeeAI Platform supports only one entry per server. To register more, you need to spawn more servers.
+</Note>
+
+<Tip>
+	You can use the platform to do LLM inference by using the `BeeAIPlatformChatModel(...)` class.
+</Tip>
+
+### Configuration
+
+**Server**
+
+The server's behavior can be influenced via attributes listed in `BeeAIPlatformServerConfig` class (host, port, self registration, ...).
+Internally the server preserves every conversation, the custom strategy can be used by implementing the base `MemoryManager` class.
+
+```python
+from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformServer, BeeAIPlatformServerConfig
+from beeai_framework.serve.utils import LRUMemoryManager
+
+memory_manager = LRUMemoryManager(maxsize=64) # keeps max 64 conversations
+config = BeeAIPlatformServerConfig(host="127.0.0.1", port=9999, run_limit=3600, limit_concurrency=10)
+server = BeeAIPlatformServer(config=config, memory_manager=memory_manager)
+```
+
+**Agent**
+
+The agent’s meta information is inferred from its metadata (the `agent.meta` property).
+However, this information can be overridden during agent registration. See the following example.
+
+```python
+from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformServer
+from beeai_framework.adapters.beeai_platform.backend.chat import BeeAIPlatformChatModel
+from beeai_sdk.a2a.extensions.ui.agent_detail import AgentDetail
+
+server = BeeAIPlatformServer()
+agent = RequirementAgent(llm=BeeAIPlatformChatModel())
+server.register(agent,
+	name="SmartAgent",
+	description="Knows everything!",
+	url="https://example.com",
+	version="1.0.0",
+	default_input_modes=["text", "text/plain"],
+	default_output_modes=["text"],
+	detail=AgentDetail(interaction_mode="multi-turn", user_greeting="What can I do for you?")
+)
+```
+
+### Customization
+
+The BeeAI Platform has a concept of [extensions](https://docs.beeai.dev/concepts/extensions) that enable access to external services and UI components via dependency injection.
+
+The framework internally uses the following extensions:
+
+- **Form Extension:** for displaying prompts and other checks (for instance when using `AskPermissionRequirement`)..
+- **Trajectory Extension:** for showing agent's intermediate steps throughout the execution
+
+<Note>The current entries are listed in the `BaseBeeAIPlatformExtensions` class.</Note>
+
+
+**Custom Extensions**
+
+The following implementation demonstrates an agent that conducts an internet search and provides an answer to the given question, with inline citations.
+It does so by leveraging the [Citation Extension](https://docs.beeai.dev/build-agents/citations), which is managed by the  `PlatformCitationMiddleware` class.
+
+<Note>Learn more about the [Middleware](/modules/middleware) concept.</Note>
+
+<CodeGroup>
+
+	{/* <!-- embedme python/examples/serve/beeai_platform_custom.py --> */}
+
+	```py Python [expandable]
+	import re
+	import sys
+	import traceback
+	from typing import Annotated
+	
+	from beeai_sdk.a2a.extensions import CitationExtensionServer, CitationExtensionSpec
+	
+	from beeai_framework.adapters.beeai_platform.backend.chat import BeeAIPlatformChatModel
+	from beeai_framework.adapters.beeai_platform.context import BeeAIPlatformContext
+	from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformMemoryManager, BeeAIPlatformServer
+	from beeai_framework.adapters.beeai_platform.serve.types import BaseBeeAIPlatformExtensions
+	from beeai_framework.agents.requirement import RequirementAgent
+	from beeai_framework.agents.requirement.events import RequirementAgentSuccessEvent
+	from beeai_framework.agents.requirement.requirements.conditional import ConditionalRequirement
+	from beeai_framework.backend import AssistantMessage
+	from beeai_framework.context import RunContext, RunMiddlewareProtocol
+	from beeai_framework.emitter import EmitterOptions, EventMeta
+	from beeai_framework.errors import FrameworkError
+	from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
+	from beeai_framework.tools.search.wikipedia import WikipediaTool
+	from beeai_framework.tools.think import ThinkTool
+	
+	try:
+	    from beeai_sdk.a2a.extensions import Citation
+	    from beeai_sdk.a2a.extensions.ui.agent_detail import AgentDetail
+	    from beeai_sdk.a2a.types import AgentMessage
+	except ModuleNotFoundError as e:
+	    raise ModuleNotFoundError(
+	        "Optional module [beeai-platform] not found.\nRun 'pip install \"beeai-framework[beeai-platform]\"' to install."
+	    ) from e
+	
+	
+	class PlatformCitationMiddleware(RunMiddlewareProtocol):
+	    def __init__(self) -> None:
+	        self._context: BeeAIPlatformContext | None = None
+	
+	    def bind(self, ctx: RunContext) -> None:
+	        self._context = BeeAIPlatformContext.get()
+	        # add emitter with the highest priority to ensure citations are sent before any other event handling
+	        ctx.emitter.on("success", self._handle_success, options=EmitterOptions(priority=10, is_blocking=True))
+	
+	    async def _handle_success(self, data: RequirementAgentSuccessEvent, meta: EventMeta) -> None:
+	        assert self._context is not None
+	        citation_ext = self._context.extensions.get("citation")
+	
+	        # check it is the final step
+	        if data.state.answer is not None:
+	            citations, clean_text = extract_citations(data.state.answer.text)
+	
+	            if citations:
+	                await self._context.context.yield_async(
+	                    AgentMessage(metadata=citation_ext.citation_metadata(citations=citations))  # type: ignore[attr-defined]
+	                )
+	                # replace an assistant message with an updated text without citation links
+	                data.state.answer = AssistantMessage(content=clean_text)
+	
+	
+	def main() -> None:
+	    agent = RequirementAgent(
+	        llm=BeeAIPlatformChatModel(preferred_models=["openai/gpt-5"]),
+	        tools=[WikipediaTool(), ThinkTool()],
+	        instructions=(
+	            "You are an AI assistant focused on retrieving information from online sources."
+	            "Mandatory Search: Always search for the topic on Wikipedia and always search for related current news."
+	            "Mandatory Output Structure: Return the result in two separate sections with headings:"
+	            " 1. Basic Information (primarily utilizing data from Wikipedia, if relevant)."
+	            " 2. News (primarily utilizing current news results). "
+	            "Mandatory Citation: Always include a source link for all given information, especially news."
+	        ),
+	        requirements=[
+	            ConditionalRequirement(ThinkTool, force_at_step=1, consecutive_allowed=False),
+	            ConditionalRequirement(WikipediaTool, min_invocations=1),
+	        ],
+	        description="Search for information based on a given phrase.",
+	        middlewares=[
+	            GlobalTrajectoryMiddleware(),
+	            PlatformCitationMiddleware(),
+	        ],  # add platform middleware to get citations from the platform
+	    )
+	
+	    # define custom extensions
+	    class CustomExtensions(BaseBeeAIPlatformExtensions):
+	        citation: Annotated[CitationExtensionServer, CitationExtensionSpec()]
+	
+	    # Runs HTTP server that registers to BeeAI platform
+	    server = BeeAIPlatformServer(memory_manager=BeeAIPlatformMemoryManager())  # use platform memory
+	    server.register(
+	        agent,
+	        name="Information retrieval",
+	        detail=AgentDetail(interaction_mode="single-turn", user_greeting="What can I search for you?"),
+	        extensions=CustomExtensions,
+	    )
+	    server.serve()
+	
+	
+	# function to extract citations from text and return clean text without citation links
+	def extract_citations(text: str) -> tuple[list[Citation], str]:
+	    citations, offset = [], 0
+	    pattern = r"\[([^\]]+)\]\(([^)]+)\)"
+	
+	    for match in re.finditer(pattern, text):
+	        content, url = match.groups()
+	        start = match.start() - offset
+	
+	        citations.append(
+	            Citation(
+	                url=url,
+	                title=url.split("/")[-1].replace("-", " ").title() or content[:50],
+	                description=content[:100] + ("..." if len(content) > 100 else ""),
+	                start_index=start,
+	                end_index=start + len(content),
+	            )
+	        )
+	        offset += len(match.group(0)) - len(content)
+	
+	    return citations, re.sub(pattern, r"\1", text)
+	
+	
+	if __name__ == "__main__":
+	    try:
+	        main()
+	    except FrameworkError as e:
+	        traceback.print_exc()
+	        sys.exit(e.explain())
+	
+	```
+
+	```ts TypeScript
+	// COMING SOON
+	```
+
+</CodeGroup>
+
+<Tip>The `BeeAIPlatformContext.get()` can be called from anywhere if the code is running inside the given context.</Tip>
