--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -48,7 +48,7 @@ def main() -> None:
     )
 
     # Register the agent with the A2A server and run the HTTP server
-    # For the ToolCallingAgent, we don't need to specify ACPAgent factory method
+    # For the ToolCallingAgent, we don't need to specify A2AAgent factory method
     # because it is already registered in the A2AServer
     # we use LRU memory manager to keep limited amount of sessions in the memory
     A2AServer(
